# aim

./: .gitignore  README.md  pubspec.yaml  pyproject.toml
aim/: suggest.py
aim/preview/: data.py  model.py  pose.py  preview.py  segment.py
aim/recommendation/: __init__.py  recommend.py  translator.py
aim/scripts/: prepare.py  server.py
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/aim/: MainActivity.kt
asset/preview/: example_pose.txt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: index.dart  main.dart
lib/page/: about.dart  home.dart
lib/states/: base.dart  chat.dart  configs.dart  garments.dart  tryon.dart
lib/utils/: image.dart  network.dart  prefs.dart
lib/widgets/: chat_widget.dart  garment_widget.dart  titled_widget.dart  tryon_widget.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
test/outfit_preview/: data_test.py  model_test.py  pose_test.py  segment_test.py
test/outfit_recommendation/: recommend_test.py
test/outfit_suggestion/: suggest_test.py
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
